documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32.H

typedef void VOID;
typedef void * LPVOID;
typedef const void * LPCVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned int UINT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long HVL;
typedef unsigned long * LPHVL;
typedef unsigned long HPORT;
typedef unsigned long HSCHED;
typedef unsigned long * LPHSCHEDITEM;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef HCARD * LPHCARD;
typedef int ERRVAL;
typedef struct
{
    LPBYTE pRecFirst;
    LPBYTE pRecNext;
    LPBYTE pRecLast;
} SEQFINDINFO;
typedef SEQFINDINFO * LPSEQFINDINFO;
    typedef struct
    {
        BYTE data[6];
    } ADDRESS;
typedef ADDRESS * LPADDRESS;

AX1W32API ERRVAL __stdcall AX1_SchedNoop(BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedPort(BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,HPORT hport,LPHSCHEDITEM hscheditem,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedRobin(BOOL bSkip,BOOL bShot,HSCHED hrobin,LPHSCHEDITEM hscheditem,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SchedSub(BOOL bSkip,BOOL bShot,HSCHED hsub,LPHSCHEDITEM hscheditem,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqClear(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqConfig(ULONG configval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqFindCheckValidType(USHORT seqtype);

AX1W32API ERRVAL __stdcall AX1_SeqFindInit(LPBYTE seqbuf,INT seqbufsize,LPSEQFINDINFO sfinfo);

AX1W32API ERRVAL __stdcall AX1_SeqFindNextEx(LPBYTE pRecord,INT recordcount,LPUSHORT seqtype,LPSEQFINDINFO sfinfo);

AX1W32API ERRVAL __stdcall AX1_SeqPause(HCARD handleval);

AX1W32API INT __stdcall AX1_SeqRd(LPBYTE bufptr,LPULONG bufcountptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqRestart(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqResume(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqSetMonitor(BOOL bmonitor,USHORT vlid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SeqStatus(LPUSHORT statusptr,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SubSchedNoop(BOOL bSkip,BOOL bShot,LPHSCHEDITEM hscheditem,HSCHED hsub,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SubSchedPort(BOOL bSkip,BOOL bShot,BOOL bTxA,BOOL bTxB,HPORT hport,LPHSCHEDITEM hscheditem,HSCHED hsub,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_SubSchedRobin(BOOL bSkip,BOOL bShot,HSCHED hrobin,LPHSCHEDITEM hscheditem,HSCHED hsub,HCARD handleval);

AX1W32API BOOL __stdcall AX1_TimeGetDelta(ULONG tth1,ULONG ttl1,ULONG tth2,ULONG ttl2,LPULONG sec,LPULONG usec);

AX1W32API BOOL __stdcall AX1_TimeGetSeconds(ULONG tth,ULONG ttl,LPULONG sec,LPULONG usec);

AX1W32API ERRVAL __stdcall AX1_TrigClearBits(ULONG bits,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_TrigGetVal(LPULONG trigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_TrigSetBits(ULONG bits,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_TrigSetVal(ULONG trigval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_TrigSinkConfig(ULONG ctrlflags,USHORT trigid,ULONG ulComp,ULONG ulMask,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfig(ULONG configval,USHORT vlid,USHORT bag,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLConfigMAC(ULONG configval,ADDRESS macdst,USHORT bag,ULONG skewmax,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetHandle(USHORT vlid,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetHandleMAC(LPADDRESS pmacdst,LPHVL hvl,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetInfo(LPULONG configval,LPUSHORT vlid,LPADDRESS pmacdst,LPADDRESS pmacsrc,LPULONG ipdst,LPULONG ipsrc,LPULONG bag,LPULONG skew,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetNext(USHORT flag,LPUSHORT nextVL,USHORT lastVL,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetNextMAC(USHORT flag,LPADDRESS pnextMAC,ADDRESS lastMAC,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLGetPortCount(LPUSHORT portcnt,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_VLSetFactors(INT factor0,INT factor1,INT factor2,INT factor3,HVL hvl,HCARD handleval);


/**
*
*  Internal functions used by the AX1 Driver.
*
**/

AX1W32API ERRVAL __stdcall AX1_CardCheck(HCARD handleval);

AX1W32API ULONG __stdcall AX1_CardGetInfo(INT infotype,HCARD handleval);

AX1W32API LPCSTR __stdcall AX1_CardGetInfoName(HCARD handleval);

AX1W32API VOID __stdcall AX1_CardInit(VOID);

AX1W32API BOOL __stdcall AX1_CardIsHostRcv(HCARD handleval);

AX1W32API BOOL __stdcall AX1_CardIsRunning(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CardOpenEx(LPHCARD lpHandle,LPCSTR cardname,INT cardnum);

AX1W32API ERRVAL __stdcall AX1_CardOpenExx(LPHCARD lpHandle,LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

AX1W32API ERRVAL __stdcall AX1_CardResetEx(HCARD handleval);

AX1W32API VOID __stdcall AX1_CardResetExx(HCARD handleval);

AX1W32API USHORT __stdcall AX1_Checksum(BYTE msb,BYTE lsb,USHORT sum);

AX1W32API ERRVAL __stdcall AX1_CommRpcArgStart(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcArgStop(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcCall(INT rpcnum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcCallEx(INT rpcnum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcInParam(LPCVOID parg,INT argsize,BOOL ptrflag,BOOL copyflag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcInParamPtr(LPCVOID parg,INT argsize,BOOL copyflag,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcInParamVal(LPCVOID parg,INT argsize,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommRpcOutParamPtr(INT index,LPVOID parg,INT argsize,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_CommTrigger(INT waittype,INT trignum,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DetectPort(LPUSHORT portnum,HVL hvl,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DetectVL(LPUSHORT vlid,USHORT netid,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DetectVLIgnore(USHORT vlid,USHORT netid,HCARD handleval);

AX1W32API ULONG __stdcall AX1_Div(ULONG diva,ULONG divb);

AX1W32API INT __stdcall AX1_DllUsageCount(VOID);

AX1W32API ERRVAL __stdcall AX1_DMAInstall(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAInstallEx(ULONG size,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAPipeClose(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAPipeOpen(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAUninstall(HCARD handleval);

AX1W32API UINT __stdcall AX1_DMAWorkerEntry(LPVOID lpParam);

AX1W32API ULONG __stdcall AX1_DMAWorkerGetBusyCount(HCARD handleval);

AX1W32API BOOL __stdcall AX1_DMAWorkerIsPause(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAWorkerPause(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAWorkerStart(LPVOID pVirt,INT sizeval,HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAWorkerStop(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_DMAWorkerUnpause(HCARD handleval);

AX1W32API ERRVAL __stdcall AX1_ErrCtrlGetConfig(LPULONG pconfigval,LPUSHORT ptrigid,HPORT hport,HCARD handleval);