documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS

Public Declare Function AX1_SchedNoop Lib "AX1W32.DLL" Alias "_AX1_SchedNoop@20" (ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedPort Lib "AX1W32.DLL" Alias "_AX1_SchedPort@32" (ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByVal hport As Long, ByRef hscheditem As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedRobin Lib "AX1W32.DLL" Alias "_AX1_SchedRobin@24" (ByVal bSkip As Long, ByVal bShot As Long, ByVal hrobin As Long, ByRef hscheditem As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SchedSub Lib "AX1W32.DLL" Alias "_AX1_SchedSub@24" (ByVal bSkip As Long, ByVal bShot As Long, ByVal hsub As Long, ByRef hscheditem As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqClear Lib "AX1W32.DLL" Alias "_AX1_SeqClear@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_SeqConfig Lib "AX1W32.DLL" Alias "_AX1_SeqConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqFindCheckValidType Lib "AX1W32.DLL" Alias "_AX1_SeqFindCheckValidType@4" (ByVal seqtype As Integer) As Long
Public Declare Function AX1_SeqFindInit Lib "AX1W32.DLL" Alias "_AX1_SeqFindInit@12" (ByRef seqbuf As Byte, ByVal seqbufsize As Long, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function AX1_SeqFindNextEx Lib "AX1W32.DLL" Alias "_AX1_SeqFindNextEx@16" (ByRef pRecord As Byte, ByVal recordcount As Long, ByRef seqtype As Integer, ByRef sfinfo As SEQFINDINFO) As Long
Public Declare Function AX1_SeqPause Lib "AX1W32.DLL" Alias "_AX1_SeqPause@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_SeqRd Lib "AX1W32.DLL" Alias "_AX1_SeqRd@12" (ByRef bufptr As Byte, ByRef bufcountptr As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqRestart Lib "AX1W32.DLL" Alias "_AX1_SeqRestart@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_SeqResume Lib "AX1W32.DLL" Alias "_AX1_SeqResume@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_SeqSetMonitor Lib "AX1W32.DLL" Alias "_AX1_SeqSetMonitor@16" (ByVal bmonitor As Long, ByVal vlid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SeqStatus Lib "AX1W32.DLL" Alias "_AX1_SeqStatus@8" (ByRef statusptr As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_SubSchedNoop Lib "AX1W32.DLL" Alias "_AX1_SubSchedNoop@20" (ByVal bSkip As Long, ByVal bShot As Long, ByRef hscheditem As Long, ByVal hsub As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SubSchedPort Lib "AX1W32.DLL" Alias "_AX1_SubSchedPort@32" (ByVal bSkip As Long, ByVal bShot As Long, ByVal bTxA As Long, ByVal bTxB As Long, ByVal hport As Long, ByRef hscheditem As Long, ByVal hsub As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_SubSchedRobin Lib "AX1W32.DLL" Alias "_AX1_SubSchedRobin@24" (ByVal bSkip As Long, ByVal bShot As Long, ByVal hrobin As Long, ByRef hscheditem As Long, ByVal hsub As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_TimeGetDelta Lib "AX1W32.DLL" Alias "_AX1_TimeGetDelta@24" (ByVal tth1 As Long, ByVal ttl1 As Long, ByVal tth2 As Long, ByVal ttl2 As Long, ByRef sec As Long, ByRef usec As Long) As Long
Public Declare Function AX1_TimeGetSeconds Lib "AX1W32.DLL" Alias "_AX1_TimeGetSeconds@16" (ByVal tth As Long, ByVal ttl As Long, ByRef sec As Long, ByRef usec As Long) As Long
Public Declare Function AX1_TrigClearBits Lib "AX1W32.DLL" Alias "_AX1_TrigClearBits@8" (ByVal bits As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_TrigGetVal Lib "AX1W32.DLL" Alias "_AX1_TrigGetVal@8" (ByRef trigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_TrigSetBits Lib "AX1W32.DLL" Alias "_AX1_TrigSetBits@8" (ByVal bits As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_TrigSetVal Lib "AX1W32.DLL" Alias "_AX1_TrigSetVal@8" (ByVal trigval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_TrigSinkConfig Lib "AX1W32.DLL" Alias "_AX1_TrigSinkConfig@20" (ByVal ctrlflags As Long, ByVal trigid As Integer, ByVal ulComp As Long, ByVal ulMask As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLConfig Lib "AX1W32.DLL" Alias "_AX1_VLConfig@28" (ByVal configval As Long, ByVal vlid As Integer, ByVal bag As Integer, ByVal skewmax As Long, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLConfigMAC Lib "AX1W32.DLL" Alias "_AX1_VLConfigMAC@32" (ByVal configval As Long, ByVal macdst As ADDRESS, ByVal bag As Integer, ByVal skewmax As Long, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetHandle Lib "AX1W32.DLL" Alias "_AX1_VLGetHandle@16" (ByVal vlid As Integer, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetHandleMAC Lib "AX1W32.DLL" Alias "_AX1_VLGetHandleMAC@16" (ByRef pmacdst As ADDRESS, ByRef hvl As Long, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetInfo Lib "AX1W32.DLL" Alias "_AX1_VLGetInfo@40" (ByRef configval As Long, ByRef vlid As Integer, ByRef pmacdst As ADDRESS, ByRef pmacsrc As ADDRESS, ByRef ipdst As Long, ByRef ipsrc As Long, ByRef bag As Long, ByRef skew As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetNext Lib "AX1W32.DLL" Alias "_AX1_VLGetNext@20" (ByVal flag As Integer, ByRef nextVL As Integer, ByVal lastVL As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetNextMAC Lib "AX1W32.DLL" Alias "_AX1_VLGetNextMAC@24" (ByVal flag As Integer, ByRef pnextMAC As ADDRESS, ByVal lastMAC As ADDRESS, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_VLGetPortCount Lib "AX1W32.DLL" Alias "_AX1_VLGetPortCount@12" (ByRef portcnt As Integer, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_VLSetFactors Lib "AX1W32.DLL" Alias "_AX1_VLSetFactors@24" (ByVal factor0 As Long, ByVal factor1 As Long, ByVal factor2 As Long, ByVal factor3 As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CardCheck Lib "AX1W32.DLL" Alias "_AX1_CardCheck@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CardGetInfo Lib "AX1W32.DLL" Alias "_AX1_CardGetInfo@8" (ByVal infotype As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CardGetInfoName Lib "AX1W32.DLL" Alias "_AX1_CardGetInfoName@4" (ByVal handleval As Long) As String
Public Declare Sub AX1_CardInit Lib "AX1W32.DLL" Alias "_AX1_CardInit@0" ()
Public Declare Function AX1_CardIsHostRcv Lib "AX1W32.DLL" Alias "_AX1_CardIsHostRcv@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CardIsRunning Lib "AX1W32.DLL" Alias "_AX1_CardIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CardOpenEx Lib "AX1W32.DLL" Alias "_AX1_CardOpenEx@12" (ByRef lpHandle As Long, ByVal cardname As String, ByVal cardnum As Long) As Long
Public Declare Function AX1_CardOpenExx Lib "AX1W32.DLL" Alias "_AX1_CardOpenExx@20" (ByRef lpHandle As Long, ByVal cardname As String, ByVal cardnum As Long, ByRef hAppWnd As Long, ByVal uiRemovalMsg As Integer) As Long
Public Declare Function AX1_CardResetEx Lib "AX1W32.DLL" Alias "_AX1_CardResetEx@4" (ByVal handleval As Long) As Long
Public Declare Sub AX1_CardResetExx Lib "AX1W32.DLL" Alias "_AX1_CardResetExx@4" (ByVal handleval As Long)
Public Declare Function AX1_Checksum Lib "AX1W32.DLL" Alias "_AX1_Checksum@12" (ByVal msb As Byte, ByVal lsb As Byte, ByVal sum As Integer) As Integer
Public Declare Function AX1_CommRpcArgStart Lib "AX1W32.DLL" Alias "_AX1_CommRpcArgStart@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcArgStop Lib "AX1W32.DLL" Alias "_AX1_CommRpcArgStop@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcCall Lib "AX1W32.DLL" Alias "_AX1_CommRpcCall@8" (ByVal rpcnum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcCallEx Lib "AX1W32.DLL" Alias "_AX1_CommRpcCallEx@8" (ByVal rpcnum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcInParam Lib "AX1W32.DLL" Alias "_AX1_CommRpcInParam@20" (ByRef parg As Long, ByVal argsize As Long, ByVal ptrflag As Long, ByVal copyflag As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcInParamPtr Lib "AX1W32.DLL" Alias "_AX1_CommRpcInParamPtr@16" (ByRef parg As Long, ByVal argsize As Long, ByVal copyflag As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcInParamVal Lib "AX1W32.DLL" Alias "_AX1_CommRpcInParamVal@12" (ByRef parg As Long, ByVal argsize As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CommRpcOutParamPtr Lib "AX1W32.DLL" Alias "_AX1_CommRpcOutParamPtr@16" (ByVal index As Long, ByRef parg As Long, ByVal argsize As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_CommTrigger Lib "AX1W32.DLL" Alias "_AX1_CommTrigger@12" (ByVal waittype As Long, ByVal trignum As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_DetectPort Lib "AX1W32.DLL" Alias "_AX1_DetectPort@12" (ByRef portnum As Integer, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_DetectVL Lib "AX1W32.DLL" Alias "_AX1_DetectVL@12" (ByRef vlid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_DetectVLIgnore Lib "AX1W32.DLL" Alias "_AX1_DetectVLIgnore@12" (ByVal vlid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_Div Lib "AX1W32.DLL" Alias "_AX1_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function AX1_DllUsageCount Lib "AX1W32.DLL" Alias "_AX1_DllUsageCount@0" () As Long
Public Declare Function AX1_DMAInstall Lib "AX1W32.DLL" Alias "_AX1_DMAInstall@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAInstallEx Lib "AX1W32.DLL" Alias "_AX1_DMAInstallEx@8" (ByVal size As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_DMAPipeClose Lib "AX1W32.DLL" Alias "_AX1_DMAPipeClose@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAPipeOpen Lib "AX1W32.DLL" Alias "_AX1_DMAPipeOpen@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAUninstall Lib "AX1W32.DLL" Alias "_AX1_DMAUninstall@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAWorkerEntry Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerEntry@4" (ByRef lpParam As Long) As Long
Public Declare Function AX1_DMAWorkerGetBusyCount Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerGetBusyCount@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAWorkerIsPause Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerIsPause@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAWorkerPause Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerPause@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAWorkerStart Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerStart@12" (ByRef pVirt As Long, ByVal sizeval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_DMAWorkerStop Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerStop@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_DMAWorkerUnpause Lib "AX1W32.DLL" Alias "_AX1_DMAWorkerUnpause@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_ErrCtrlGetConfig Lib "AX1W32.DLL" Alias "_AX1_ErrCtrlGetConfig@16" (ByRef pconfigval As Long, ByRef ptrigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
